# biases

./: .gitignore  README.md  main.py  mtbench_stratified_198.csv  nlp.v1.py  pyproject.toml
data/processed/: mtbench_stratified_198.csv
logs/: authority-bias-qwen3-32b-bf16-20905.err  authority-bias-qwen3-32b-bf16-20905.out  bandwagon-bias-qwen25-14b-vllm-19984.err  bandwagon-bias-qwen25-14b-vllm-19984.out  bandwagon-bias-qwen3-32b-bf16-20906.err  bandwagon-bias-qwen3-32b-bf16-20906.out
outputs/authority_bias_qwen2_5_14b_vllm_2223/: authority_pair_summary.jsonl  authority_run_records.jsonl  authority_summary.json
outputs/authority_bias_qwen3_32b_bf16_20905/: authority_pair_summary.jsonl  authority_run_records.jsonl  authority_summary.json
outputs/bandwagon_bias_qwen2_5_14b_vllm_19984/: bandwagon_pair_summary.jsonl  bandwagon_run_records.jsonl  bandwagon_summary.json
outputs/bandwagon_bias_qwen3_32b_bf16_20906/: bandwagon_pair_summary.jsonl  bandwagon_run_records.jsonl  bandwagon_summary.json
outputs/position_bias_qwen2_5_14b_vllm_2017/: position_pair_summary.jsonl  position_run_records.jsonl  position_summary.json
outputs/position_bias_qwen3_32b_bf16_21054/: position_pair_summary.jsonl  position_run_records.jsonl  position_summary.json
scripts/: prepare_mtbench_stratified.py
src/biases/: __init__.py  __main__.py  authority_bias.py  authority_prompts.py  cli.py  command_line.py  position_bias.py  position_prompts.py  prompts.py  schemas.py  utils.py
tests/: test_authority_bias.py  test_position_bias.py
